Add jumbotron to index.html

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </head>
 
   <body class="d-flex flex-column h-100">
-    <header class="bg-dark text-white">
-      <nav class="navbar navbar-expand-md navbar-dark">
+    <header>
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark text-white">
         <a class="navbar-brand ms-3" href="#">Miguel's <span>Collab</span></a>
         <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
           aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,6 +39,18 @@
           </ul>
         </div>
       </nav>
+      <div class="py-5">
+        <div class="container bg-light border border-primary rounded px-5 py-3">
+          <div class="row g-3">
+            <div class="col-xl-5 col-sm-12 offset-xl-1 my-auto">
+              <h1 class="display-4 text-primary">Miguel's Collab</h1>
+              <p class="lead display-6 text-dark">Something here<span class="d-block text-muted h5">Some more text here</span></p>
+              <button class="btn btn-primary mt-3">Here is a button</button>
+            </div>
+              <img src="http://placekitten.com/600/400" alt="placeholder" class="img-fluid col-xl-5 mx-auto">
+          </div>
+        </div>
+      </div>
     </header>
     <main class="">
       <div class="container">
@@ -63,7 +75,7 @@
       </div>
     </main>
     <footer class="bg-danger text-white">
-      <div class="container">
+      <div class="container text-center">
         <h2>Footer</h2>
       </div>
     </footer>
